<resources>
    <string name="app_name">Now Music Stream</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vishal+Android+Apps</string>

    <string name="privacy_policy_url">http://hostfile.xyz</string>

    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Playlists</string>
    <string name="tab_text_3">Artist</string>
    <string name="tab_text_4">Albums</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_line">Play your favourite Songs</string>
    <string name="image_content">image</string>
    <string name="home">Home</string>
    <string name="artist">Artist</string>
    <string name="albums">Albums</string>
    <string name="playlist">Playlist</string>
    <string name="myplaylist">My Playlists</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="err_no_artist_found">No Artist Found</string>
    <string name="err_internet_not_conn">Internet Not Connected</string>
    <string name="refresh">Refresh</string>
    <string name="see_all">See All</string>
    <string name="search">Search</string>
    <string name="err_server">Error connecting server</string>
    <string name="recent">Recent</string>
    <string name="categories">Playlists</string>
    <string name="latest">Latest</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="recently_played">Recently Played</string>
    <string name="err_no_songs_found">No Songs Found</string>
    <string name="err_no_cat_found">No Categories Found</string>
    <string name="dashboard">Dashboard</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="moreapp">More Apps</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="err_no_songs_selected">No Songs Selected</string>
    <string name="close">Close</string>
    <string name="rating">Rating</string>
    <string name="share_song">Share Song</string>
    <string name="listening">I am listening</string>
    <string name="err_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="rate_song">Thank you for rating</string>
    <string name="submit">Submit</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="volume">Volume</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="err_no_playlist_found">No Playlist Found</string>
    <string name="downloading">Downloading</string>
    <string name="already_download">Already Downloaded</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="retry">Retry</string>
    <string name="err_no_albums_found">No Albums Found</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="select_rating">Select Rating</string>
    <string name="loading">Loading..</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="file_deleted">File Deleted</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">ADD</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="songs">Songs</string>
    <string name="title_activity_main2">MusicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title">Title</string>
    <string name="music_library">Music Library</string>
    <string name="local_songs">Local Songs</string>
    <string name="add_songs">Add Songs</string>
    <string name="selected">Selected</string>
    <string name="select_song">Please select song</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="all_songs">All Songs</string>
    <string name="banner">Banner</string>
    <string name="downloads">Downloads</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="setas">SetAs</string>

    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>
    <string name="set_as_noti">Set As Notificaiton tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="noti_set">Notification tone set</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="off_add_qeue_alert">Current online songs will be remove from the queue</string>
    <string name="no_songs_to_add_queue">No songs available to add to queue</string>
    <string name="queue_updated">Queue Updated</string>
    <string name="rate_song2">How likely do you to recommend this app to your friends?</string>
    <string name="err_playing_song">Error Playling Song</string>

</resources>
