<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/trending_songs"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_home_songs_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/tv_songs_empty"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/err_no_songs_found"
                    android:textColor="@color/black80"
                    android:textSize="16sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/albums"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_home_albums_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/tv_albums_empty"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/err_no_albums_found"
                    android:textColor="@color/black80"
                    android:textSize="16sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/artist"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_home_artist_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/tv_artist_empty"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/err_no_artist_found"
                    android:textColor="@color/black80"
                    android:textSize="16sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/pb_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:cpb_color="#FFee44"
            app:cpb_colors="@array/pocket_bar_colors"
            app:cpb_max_sweep_angle="300"
            app:cpb_min_sweep_angle="10"
            app:cpb_rotation_speed="1.0"
            app:cpb_stroke_width="4dp"
            app:cpb_sweep_speed="1.0" />

        <FrameLayout
            android:id="@+id/fl_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="?attr/actionBarSize" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>